<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_Safety" Id="{ddb32b1a-34b4-48ef-acd6-b34e756b6ef8}">
    <Declaration><![CDATA[TYPE ST_Safety :
STRUCT
	

	//Basic Safety variables, add more if needed.
	bEStop					: BOOL;
	bEnergised				: BOOL;
	bHealthy				: BOOL;
	bEStopOk				: BOOL;
	bEStopResetRequired		: BOOL;
	

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>